k8s/deploy/locust/deployment-master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust-master
  template:
    metadata:
      labels:
        app: locust-master
    spec:
      containers:
      - name: locust-master
        image: 192.168.0.31:5000/k3d/kong-locust:0.0.1
        imagePullPolicy: Always
        command: 
          - locust
          - --host
          - https://backend01.api.k3d.contoso.com
          - --master
        livenessProbe:
          httpGet:
            path: /
            port: 8089
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 600m
            memory: 1024Mi
        ports:
        - containerPort: 8089
          name: http
          protocol: TCP
      hostAliases:
        - ip: "192.168.0.31"
          hostnames:
            - "backend01.api.k3d.contoso.com"
            - "keycloak.apps.k3d.contoso.com"
