k8s/deploy/locust/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: locust-worker
  template:
    metadata:
      labels:
        app: locust-worker
    spec:    
      containers:
      - name: locust-worker
        image: 192.168.0.31:5000/k3d/kong-locust:0.0.1
        imagePullPolicy: Always
        command: 
          - locust
          - --host
          - https://backend01.api.k3d.contoso.com
          - --worker
          - --master-host
          - locust-master
        livenessProbe:
          exec:
            command:
              - python
              - --version
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 600m
            memory: 1024Mi
        ports:
        - containerPort: 8089
          name: http
          protocol: TCP
      hostAliases:
        - ip: "192.168.0.31"
          hostnames:
            - "backend01.api.k3d.contoso.com"
            - "keycloak.apps.k3d.contoso.com"
