k8s/deploy/locust/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: locust
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: locust.tools.k3d.contoso.com
      http:
        paths:
          - backend:
              serviceName: locust-master
              servicePort: 8089
            path: /
  tls:
    - secretName: tools-wildcard-cert
